Class manager fixes